<resources>
    <string name="app_name">Chasabad - A Digital Farmer</string>
    <string name="app_title">Chasabad</string>
    <string name="app_slogan">A Digital Farmer</string>
    <string name="app_developer_text">Developed by</string>
    <string name="app_developer">Dipto Roy</string>
    <string name="menu_one">Menu one</string>
    <string name="event_date">27</string>
    <string name="event_month">March</string>
    <string name="event_name">Agricultural Fair 2021</string>
    <string name="event_time">02.00 AM</string>
    <string name="event_location">Palpara, Rangpur</string>
    <string name="event_date_text">Date</string>
    <string name="event_month_text">Month</string>
    <string name="event_name_text">Event Name</string>
    <string name="event_time_text">Time</string>
    <string name="event_location_text">Event Location</string>
    <string name="event_author_text">Jhon Doe</string>
    <string name="event">Event</string>
    <string name="tips">Tips</string>
    <string name="productName">Products</string>
    <string name="products_current_price">T/S</string>
    <string name="products_current_buy_price">T/B</string>
    <string name="products_previous_price">Y/S</string>
    <string name="products_previous_Buy_price">Y/B</string>
    <string name="date">26-03-2021</string>
    <string name="history">Your history</string>
    <string name="highlight">News Of The Day</string>
    <string name="highlightDetails">Agricultural Fair 2021, News Of The Day, Chasabad - A Digital Farmer</string>
    <string name="top_news">Top News</string>
    <string name="learn_more">Learn More</string>
    <string name="author">Jhon Doe</string>
    <string name="source">BBC</string>
    <string name="productName2">Tata Tractor</string>
    <string name="productPrice">$19999</string>
    <string name="productCutPrice">$12999</string>
    <string name="productStar">5</string>
    <string name="GetProduct">Get your Product</string>
    <string name="ShopDetails">Shop Details</string>
    <string name="ShopAuthor">Ratan Tata</string>
    <string name="ShopLocation">Mumbai,India</string>
    <string name="ShopName">Tata Motors</string>
    <string name="ShopPhone">+892345676</string>
    <string name="ShopSite">www.tatamotors.com</string>
    <string name="ShopAuthorText">Author :</string>
    <string name="ShopLocationText">Location :</string>
    <string name="ShopNameText">Shop Name :</string>
    <string name="ShopPhoneText">Phone :</string>
    <string name="ShopSiteText">Website :</string>

    <string name="CropName">Rice</string>
    <string name="CropTime">March - July</string>
    <string name="CropTimeText">Time</string>
    <string name="CropIntroText">Crop Introduction</string>
    <string name="CropProcessText">Crop Process</string>
    <string name="CropIntro"> Oryza glaberrima (African rice). The name wild rice is usually used for species of the genera Zizania and Porteresia, both wild and domesticated, although the term may also be used for primitive or uncultivated varieties of Oryza.</string>
    <string name="CropProcess">The cultivation of rice begins by planting water-soaked seeds in a properly prepared bed. Oftentimes, the seedlings are transplanted to the paddy when they reach a certain size. When the grains begin to ripen, the water is drained from the fields. Harvesting begins when the grain yellow and the plants start to droop.</string>
    <string name="CropDisease">Bacterial blight,Bacterial leaf streak,Blast (leaf and collar),Brown spot,False smut,Rice grassy stunt,Rice ragged stunt,Sheath blight.</string>
    <string name="CropFertilizerName">Uria</string>
    <string name="CropFertilizerNameText">Fertilizer</string>
    <string name="CropFertilizerAmount">2 kg</string>
    <string name="CropFertilizerFirst">First</string>
    <string name="CropFertilizerSecond">Second</string>
    <string name="CropFertilizerThird">Third</string>
    <string name="CropCaste">Amon</string>
    <string name="CropCasteText">Type</string>

    <string name="cropDiseaseA">Bacterial leaf streak</string>
    <string name="cropDiseaseDetailsText">Disease Details</string>
    <string name="cropDiseaseAD">The cultivation of rice begins by planting water-soaked seeds in a properly prepared</string>
    <string name="cropDiesaseGroupName">Xanthomonas oryzae</string>
    <string name="cropDiseaseMedicine">Antibiotics, Agrimycin 100, Agrimycin 500, Agric</string>
    <string name="cropDiseaseMedicineRule">The cultivation of rice begins by planting water-soaked seeds in a properly prepared</string>
    <string name="cropDiseaseCropName">Rice,Jute</string>
    <string name="cropDiesaseMedicineGroupName">Oryzae</string>
    <string name="cropDiseaseMedicineText">Medicine</string>
    <string name="cropDiseaseCropText">Affected Crops</string>
    <string name="cropDiseaseMedicineRuleText">Medicine Rule</string>
    <string name="cropDiseaseMedicineGroupName">(Agrimycin)</string>

    <string name="nurseryNameText">Corsica</string>
    <string name="nurseryDetailsText">Detail</string>
    <string name="nurseryProcessText">Process</string>
    <string name="nurseryUsagesText">Use</string>
    <string name="nurseryDetails">The cultivation of rice begins by planting water-soaked seeds in a properly prepared</string>

    <string name="nurseryFamilyText">Family</string>
    <string name="nurseryFamily">Agavoideae</string>
    <string name="nurseryOriginText">Origin</string>
    <string name="nurseryOrigin">American And Caribian</string>
    <string name="nurseryHeightText">Height</string>
    <string name="nurseryHeight">24 inch to 30 inch</string>
    <string name="nurseryCategoryText">Category</string>
    <string name="nurseryCategory">Indoor</string>

    <string name="nurseryCultivationText">Cultivation</string>
    <string name="nurseryCultivation">Transplanted</string>
    <string name="nurseryHarvestingText">Harvesting</string>
    <string name="nurseryHarvesting">90-100 days</string>
    <string name="nurseryTempText">Temperature</string>
    <string name="nurseryTemp">21 to 27 cel</string>

    <string name="farmingName">Cow</string>
    <string name="farmingTypeText">Type</string>
    <string name="farmingType">Domestic</string>
    <string name="farmingBreedText">Breed</string>
    <string name="farmingBreed">Belgium</string>
    <string name="farmingBehaveText">Behave</string>
    <string name="farmingBehave">Friendly</string>
    <string name="farmingDiseaseText">Disease</string>
    <string name="farmingVaccinationText">Vaccination</string>

    <string name="signup_text">Sign Up</string>
    <string name="signin_text">Sign In</string>
    <string name="forgetpassword_text">Forget Password</string>
    <string name="validEmail_text">Please provide your valid Email.</string>

    <string name="question_text">Question</string>
    <string name="answer_text">Answer</string>
    <string name="time_text">2 min ago</string>
    <string name="submit_btn_text">Submit</string>
    <string name="question_bank_text">Question Bank</string>
    <string name="question_bank_details">Question Bank</string>

    <string name="profile_name">Jhon Doe</string>
    <string name="profile_email">jhonDoe@email.com</string>
    <string name="profile_occupation">Farmer</string>
    <string name="profile_phone">+09873456781</string>
    <string name="profile_question">My Question</string>

    <string name="notification_name">Notification Title</string>
    <string name="notification_details">Notification</string>

    <string name="app_details_text">Application Details</string>
    <string name="app_details">Chasabad is an agricultural app, It"'"s helping to the farmer. By using this app Farmer can see their location-based weather, because weather is important for agriculture. They also learn how to plant right, they can read agriculture articles. Also, make an own blog that can see another farmer. They get notifications when UV can damage their skin and other things. They can see the agriculture seminar and tips.</string>
    <string name="app_details_developer">Developer: Dipto Roy</string>
    <string name="app_details_email">Email: diptoroypersonal@gmail.com</string>
    <string name="app_details_team">Adornment Campus</string>
    <string name="app_details_contact">Contact Info</string>

</resources>