<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fertilizerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/CropFertilizerNameText"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/fertilizer_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/CropFertilizerFirst"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/fertilizer_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/CropFertilizerSecond"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/fertilizer_third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/CropFertilizerThird"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>