<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/productName"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/current_sell_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/products_current_price"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/ts_signal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:visibility="invisible"
                android:src="@drawable/ic_baseline_arrow_drop_up_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/current_buy_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/products_current_buy_price"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/tb_signal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:visibility="invisible"
                android:src="@drawable/ic_baseline_arrow_drop_down_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/previous_sell_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/products_previous_price"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/previous_buy_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/products_previous_Buy_price"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>